readCatalogueByAvailabilityId api
