# gardabook-services/api/swagger.yaml
@@ -215,13 +215,13 @@ paths:
       - "read:catalogue"
       - "write:catalogue"
       x-swagger-router-controller: "Catalogue"
-  /catalogue/availability/{catalogueId}:
+  /catalogue/availability/{availabilityId}:
     get:
       tags:
       - "catalogue"
-      summary: "Find availability by catalogue ID"
-      description: "Returns list of availability of catalogue"
-      operationId: "getAvailabilityByCatalogueId"
+      summary: "Find catalogues by availability ID"
+      description: "Returns list of catalogues with the availability ID"
+      operationId: "readCatalogueByAvailabilityId"
       produces:
       - "application/xml"
       - "application/json"
@@ -231,9 +231,9 @@ paths:
         required: true
         type: "string"
         default: "retrieve"
-      - name: "catalogueId"
+      - name: "availabilityId"
         in: "path"
-        description: "ID of catalogue"
+        description: "ID of availability"
         required: true
         type: "string"
       responses:
